--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
   "devDependencies": {
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.12",
+    "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
+    "babel-plugin-styled-components": "^1.13.1",
     "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.0",
     "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   }
 }
