--- a/package.json
+++ b/package.json
@@ -25,10 +25,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
     "next": "^11.0.1",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "redux-wrapper": "^0.0.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
