--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "v14.15.4",
+    "npm": "7.8.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
