--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "v14.15.4",
+    "node": "14.17.1",
     "npm": "7.8.0"
   },
   "scripts": {
